[gd_scene load_steps=3 format=3 uid="uid://bnoi353h0m56e"]

[ext_resource type="Script" uid="uid://bby33gq4vy5ri" path="res://scripts/defang_tool.gd" id="1_pg4kf"]
[ext_resource type="Theme" uid="uid://cvjkotbfb80tq" path="res://assets/UIMainTheme.tres" id="2_5eaj0"]

[node name="DefangTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pg4kf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="DefangIPList" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/DefangIPList"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Defang IP List"
horizontal_alignment = 1

[node name="IPDefangText" type="TextEdit" parent="HBoxContainer/DefangIPList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="IPDefangButton" type="Button" parent="HBoxContainer/DefangIPList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_5eaj0")
text = "Execute"

[node name="DefangURLList" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/DefangURLList"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Defang URL List"
horizontal_alignment = 1

[node name="DefangURLText" type="TextEdit" parent="HBoxContainer/DefangURLList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="DefangURLButton" type="Button" parent="HBoxContainer/DefangURLList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_5eaj0")
text = "Execute"
